MyAnimeList: Fix dark mode success box

--- a/themes/myanimelist.net/myanimelist.user.css
+++ b/themes/myanimelist.net/myanimelist.user.css
@@ -86,7 +86,7 @@
 	}
 
 	/* 'Success' box */
-	.goodresult {
+	#content .goodresult {
 		background-color: theme-foreground-color !important;
 	}
 
